z-index fixes

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -622,6 +622,8 @@ section
   &.feedback-section
     min-height: 400px
     background-color: $bg-color-dark
+    position: relative
+    z-index: 10
 
     .container
       display: flex
